--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="South Florida Developer, I enjoy developing using PHP, Ruby on Rails and Golang (go)">
     <meta name="keywords" content="South Florida PHP, Golang Developer, Director of Engineering, CakePHP, Ruby on Rails, South FLorida Startup, Go Developer">
     <meta name="author" content="Jose M. Robles">
-	<meta name="google-site-verification" content="7f-ijLb-1zggYOqBrubUgZuIKKKGgklWnUjKkKDUl4M" />
+	<meta name="google-site-verification" content="crs5Gyskfme6eEVRpYLthqaeaZhFNLsoWngDMKCNrGE" />
 
     <title>Jose M. Robles</title>
 
@@ -79,7 +79,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Jose Robles</h1>
-                        <p class="intro-text">Hands-on Director of Engineering and Software Engineer.</p
+                        <p class="intro-text">Hands-on Software Engineering leader and Software Engineer with a passion for leadership, engineering excellence, and all things Golang!.</p
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -105,12 +105,10 @@
 		<div class="col-lg-8 col-lg-offset-2">
 			<h3>Technical Proficiencies</h3>
 			<p>
-				<a href="#">Languages</a></br>PHP, Golang, Cold Fusion, Javascript
+				<a href="#">Languages</a></br>PHP, Golang, Cold Fusion, Javascript, Ruby, C++
 				</br></br><a href="#">Development Frameworks</a> </br>CakePHP, Zend Framework, CodeIgniter, PhalconPHP, Laravel, Ruby on Rails
-				</br></br><a href="#">Databases</a></br>MySQL, SQL Server, Redis
+				</br></br><a href="#">Databases</a></br>MySQL, SQL Server, Redis, MongoDB
 				</br></br><a href="#">Other</a></br>Docker, RabbitMQ, Git, Jira, AWS
-				</br></br><a href="#">Currently Learning</a></br>Chef, Elasticsearch, Terraform, Ruby 
-				</br></br><a href="#">On Deck</a></br>MongoDB, Java, NodeJS, React Native
 			</p>
 		</div>
 	</div>
